@@ -4,6 +4,7 @@ data/test2.psv
 data/test3.xml
 data/test4.csv
 data/test5.csv
+data/test6.xml
 lib/Database/Abstraction.pm
 LICENSE
 Makefile.PL
@@ -26,6 +27,7 @@ t/lib/Database/test2.pm
 t/lib/Database/test3.pm
 t/lib/Database/test4.pm
 t/lib/Database/test5.pm
+t/lib/Database/test6.pm
 t/lib/MyLogger.pm
 t/logger.t
 t/no_entry.t
@@ -42,3 +44,4 @@ t/two_databases.t
 t/vars.t
 t/version.t
 t/xml.t
+t/xml_record.t
